# remob2

./: .gitignore  README.md  pyproject.toml
HPXRDrefinement/: .~lock.refinements.pptx#  1.gpx  10.gpx  11.gpx  14.gpx  15.gpx  5.gpx
data/: README.md
data/processed/: README.md  example_data_1.csv
data/processed/HPXRDrefinement/: 01data.csv  01reflec.csv  12.gpx  13.gpx  17data.csv  17reflec.csv  2.gpx  28data.csv  28reflec.csv  3.gpx  4.gpx  6.gpx  7.gpx  8.gpx  9.gpx  README.md  lattice_parameters.csv  sequential_15toend.gpx
data/processed/JCPDS/: 1_Au_Fei2007.jcpds  2_Ne_Dewaele2008.jcpds  3_Re_Anzellini2014.jcpds  4_Al2O3_Dewaele2013.jcpds  5_Diamond_Dewaele2008.jcpds  B2Mo_mp-2331_symmetrized_R-3m[166].jcpds  B2Mo_mp-960_symmetrized_P6mmm[191].jcpds  B_mp-1055985_symmetrized_P6mmm[191].jcpds  ReB2_mp-1773_symmetrized_P63mmc[194].jcpds
data/processed/Run1_XRD/: 10_ReMoB2_49p0GPa_490psi_P1_C4_D1w_077.fxye  10_ReMoB2_49p0GPa_490psi_P1_C4_D1w_077.mask  11_ReMoB2_52p0GPa_520psi_P1_C4_D1w_083.fxye  README.md  (+19 more)
data/raw/: 01reflec166.csv  17data.csv  17reflec.csv  17reflec166.csv  17reflec191.csv  1data.csv  1reflec.csv  28data.csv  28reflec.csv  28reflec166.csv  28reflec191.csv  README.md  lattice_parameters.xlsx
hamlinlab_template/: __init__.py  config.py  example.py
notebooks/: 01_quick_start.ipynb  02_ResistancePlotting.ipynb  02_ResistancePlotting_new.ipynb  1_ResistancePlotting.ipynb  2_Raman.ipynb  3_Ruby.ipynb  3_XRD.ipynb  4_XRD.ipynb  HPXRD.ipynb  README.md  Raman.ipynb  Ruby.ipynb  Testing stuff.ipynb  XRD.ipynb
publication_ready/: README.md
(+518 files in other folders)
