[tool.poetry]
name = "hamlinlab_template"
version = "0.1.0"
description = "A starting point for data analysis in the Hamlin Lab"
authors = ["jhamlin-ufl <jhamlin@ufl.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
scipy = "^1.10.1"
ipympl = "^0.9.3"
sigfig = "^1.3.2"
matplotlib = "^3.7.0"
lmfit = "^1.1.0"
# If you use a setup with multiple accounts you may need e.g.:
hamlinlab = {git = "https://github.com/jhamlin-ufl/hamlinlab.git", branch = "main"}
#hamlinlab = {git = "github.com:jhamlin-ufl/hamlinlab.git", branch = "main"}
jupyterlab = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
